--- a/chatbot/static/css/custom.css
+++ b/chatbot/static/css/custom.css
@@ -1,5 +1,7 @@
-body.layout-4 .main-sidebar .sidebar-menu li.dlink.active>a{color:#3B3D55 !important}
-.bicon{
+body.layout-4 .main-sidebar .sidebar-menu li.dlink.active > a {
+    color: #3b3d55 !important;
+}
+.bicon {
     width: 50px !important;
     height: 50px !important;
     line-height: 22px !important;
@@ -9,7 +11,12 @@ body.layout-4 .main-sidebar .sidebar-menu li.dlink.active>a{color:#3B3D55 !impor
     text-align: center;
     float: left;
 }
-.bicon>i{
+.bicon > i {
     font-size: 22px !important;
     color: #fff;
+}
+.main-logo {
+    width: 150px;
+    -webkit-filter: drop-shadow(0px 0px 10px 15px #fff);
+    filter: drop-shadow(0px 0px 10px 15px #fff);
 }
