--- a/chatbot/templates/auth/register.html
+++ b/chatbot/templates/auth/register.html
@@ -55,10 +55,14 @@ KingspinAI {% endblock title %}
           > -->
         </div>
       </div>
+      {% for field in register_form %}
+        {% if field.errors %}
+          {% for error in field.errors %}
+                 <p style="color: red">{{error|escape}}</p>
 
-      {% for error in register_form.errors %}
-      <p style="color: red">{{error}}</p>
-      {%endfor%}
+          {% endfor %}
+        {% endif %}
+      {% endfor %}
       <div class="form-group">
         <button type="submit" class="btn btn-primary btn-lg btn-block">
           Register
