--- a/chatbot/templates/index.html
+++ b/chatbot/templates/index.html
@@ -17,8 +17,8 @@ Kingspin - AI
                 <div class="row">
                     <div class="col-lg-12">
                         <nav class="navbar navbar-expand-lg">
-                            <a class="navbar-brand" href="index.html">
-                                <img src="{% static 'images/logo.svg' %}" alt="Logo">
+                            <a class="navbar-brand" href="/">
+                                <img class="main-logo" src="{% static 'images/logo.png' %}" width="200" alt="Logo">
                             </a>
                             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                                 <span class="toggler-icon"></span>
