--- a/chatbot/templates/user/nav.html
+++ b/chatbot/templates/user/nav.html
@@ -3,27 +3,43 @@
 <nav class="navbar navbar-expand-lg main-navbar">
     <form class="form-inline mr-auto">
         <ul class="navbar-nav mr-3">
-            <li><a href="#" data-toggle="sidebar" class="nav-link nav-link-lg"><i class="fas fa-bars"></i></a></li>
+            <li>
+                <a href="#" data-toggle="sidebar" class="nav-link nav-link-lg"
+                    ><i class="fas fa-bars"></i
+                ></a>
+            </li>
         </ul>
     </form>
-    
-    {% if user.is_authenticated %}
-        <ul class="navbar-nav navbar-right">
-            
-            <li class="dropdown">
-                <a href="#" data-toggle="dropdown" class="nav-link dropdown-toggle nav-link-lg nav-link-user">
-                <i class="far fa-user-circle my-3 mx-1"></i> 
 
-                <div class="d-sm-none d-lg-inline-block">Hi, {{request.user}}</div></a>
-                <div class="dropdown-menu dropdown-menu-right">
-                    <!-- <div class="dropdown-title">Logged in 5 min ago</div>
+    {% if user.is_authenticated %}
+    <ul class="navbar-nav navbar-right">
+        <li class="dropdown">
+            <a
+                href="#"
+                data-toggle="dropdown"
+                class="nav-link dropdown-toggle nav-link-lg nav-link-user"
+            >
+                <i class="far fa-user-circle my-3 mx-1"></i>
+
+                <div class="d-sm-none d-lg-inline-block">
+                    Hi, {{request.user}}
+                </div></a
+            >
+            <div class="dropdown-menu dropdown-menu-right">
+                <!-- <div class="dropdown-title">Logged in 5 min ago</div>
                     <a href="features-profile.html" class="dropdown-item has-icon"><i class="far fa-user"></i> Profile</a>
                     <a href="features-activities.html" class="dropdown-item has-icon"><i class="fas fa-bolt"></i> Activities</a>
                     <a href="features-settings.html" class="dropdown-item has-icon"><i class="fas fa-cog"></i> Settings</a> -->
-                    <!-- <div class="dropdown-divider"></div> -->
-                    <a href="{%url 'logout'%}" class="dropdown-item has-icon text-danger"><i class="fas fa-sign-out-alt"></i> Logout</a>
-                </div>
-            </li>
-        </ul>
+                <!-- <div class="dropdown-divider"></div> -->
+                <div class="text-center">{{user.company_name}} </a></div>
+                <div class="dropdown-divider"></div>
+                <a
+                    href="{%url 'logout'%}"
+                    class="dropdown-item has-icon text-danger"
+                    ><i class="fas fa-sign-out-alt"></i> Logout</a
+                >
+            </div>
+        </li>
+    </ul>
     {% endif %}
 </nav>
