Image and Video Support

--- a/chatbot/templates/auth/register.html
+++ b/chatbot/templates/auth/register.html
@@ -1,7 +1,6 @@
 {% extends "auth/base.html" %}
 {% load widget_tweaks %}
-{% block title %}Register &mdash;
-KingspinAI {% endblock title %} 
+{% block title %}Register{% endblock title %} 
 
 {% block content %}
 
