--- a/chatbot/templates/auth/base.html
+++ b/chatbot/templates/auth/base.html
@@ -44,12 +44,21 @@
                 <div class="container mt-5">
                     <div class="row">
                         <div
-                            class="col-12 col-sm-8 offset-sm-2 col-md-6 offset-md-3 col-lg-6 offset-lg-3 col-xl-4 offset-xl-4"
+                            class="
+                                col-12 col-sm-8
+                                offset-sm-2
+                                col-md-6
+                                offset-md-3
+                                col-lg-6
+                                offset-lg-3
+                                col-xl-4
+                                offset-xl-4
+                            "
                         >
                             <div class="login-brand">
                                 <a href="/">
                                     <img
-                                        src="{% static 'images/logo.png' %}"
+                                        src="{% static 'images/logov.png' %}"
                                         width="200"
                                         alt="logo"
                                         class=""
