--- a/chatbot/templates/auth/forgot-password.html
+++ b/chatbot/templates/auth/forgot-password.html
@@ -1,43 +1,38 @@
-{% extends "auth/base.html" %} 
-{% block title %}Forget password &mdash;
-KingspinAI {% endblock title %} 
-
-{% block content %}
+{% extends "auth/base.html" %} {% block title %}Forget password{% endblock title
+%} {% block content %}
 
 <div class="card card-primary">
-  <div class="card-header">
-    <h4>Forgot Password</h4>
-  </div>
-  <div class="card-body">
-    <p class="text-muted">We will send a link to reset your password</p>
-    <form method="POST">
+    <div class="card-header">
+        <h4>Forgot Password</h4>
+    </div>
+    <div class="card-body">
+        <p class="text-muted">We will send a link to reset your password</p>
+        <form method="POST">
+            {%csrf_token%}
 
-
-      {%csrf_token%}
-
-      <div class="form-group">
-        <label for="email">Email</label>
-        <input
-          id="email"
-          type="email"
-          class="form-control"
-          name="email"
-          tabindex="1"
-          required
-          autofocus
-        />
-      </div>
-      <div class="form-group">
-        <button
-          type="submit"
-          class="btn btn-primary btn-lg btn-block"
-          tabindex="4"
-        >
-          Forgot Password
-        </button>
-      </div>
-    </form>
-  </div>
+            <div class="form-group">
+                <label for="email">Email</label>
+                <input
+                    id="email"
+                    type="email"
+                    class="form-control"
+                    name="email"
+                    tabindex="1"
+                    required
+                    autofocus
+                />
+            </div>
+            <div class="form-group">
+                <button
+                    type="submit"
+                    class="btn btn-primary btn-lg btn-block"
+                    tabindex="4"
+                >
+                    Forgot Password
+                </button>
+            </div>
+        </form>
+    </div>
 </div>
 
 {% endblock %}
