--- a/chatbot/templates/auth/login.html
+++ b/chatbot/templates/auth/login.html
@@ -1,7 +1,7 @@
 {% extends "auth/base.html" %}
 {% load widget_tweaks %}
 
-{% block title %}login &mdash; KingspinAI {% endblock title %}
+{% block title %}Login{% endblock title %}
 
 {% block content %}
 
