--- a/chatbot/templates/index.html
+++ b/chatbot/templates/index.html
@@ -147,7 +147,7 @@ Kingspin - AI
                         </div>
                         <div class="services-content mt-30">
                             <h4 class="services-title"><a href="#">Designed for Perfection</a></h4>
-                            <p class="text">Kingspinai’s NLP architecture is built on a combination of modules such as Language detection, ASR classification, Context Manager, that work in tandem with deep learning-based encoders to accurately understand natural language and handle user queries with higher precision.</p>
+                            <p class="text">Kingspinai’s NLU architecture is built on a combination of modules such as Language detection, ASR classification, Context Manager, that work in tandem with deep learning-based encoders to accurately understand natural language and handle user queries with higher precision.</p>
                             <!--<a class="more" href="#">Learn More <i class="lni-chevron-right"></i></a>-->
                         </div>
                     </div> <!-- single services -->
@@ -230,17 +230,17 @@ Kingspin - AI
                     <div class="about-content mt-50 wow fadeInLeftBig" data-wow-duration="1s" data-wow-delay="0.5s">
                         <div class="section-title">
                             <div class="line"></div>
-                            <h3 class="title">NLP powered <span> with Essential Features</span></h3>
+                            <h3 class="title">NLU powered <span> with Essential Features</span></h3>
                         </div> <!-- section title -->
                         <p class="text">
-                            NLP architecture is built on a combination of modules such as Language detection, ASR classification, Context Manager, that work in tandem with deep learning-based encoders to accurately understand natural language and handle user queries with higher precision.
+                            NLU architecture is built on a combination of modules such as Language detection, ASR classification, Context Manager, that work in tandem with deep learning-based encoders to accurately understand natural language and handle user queries with higher precision.
                         </p>
                         <!-- <a href="#" class="main-btn">Try it Free</a> -->
                     </div> <!-- about content -->
                 </div>
                 <div class="col-lg-6 order-lg-first">
                     <div class="about-image text-center mt-50 wow fadeInRightBig" data-wow-duration="1s" data-wow-delay="0.5s">
-                        <img src="{% static 'images/nlp.png' %}" alt="about">
+                        <img src="{% static 'images/nlu.png' %}" alt="about">
                     </div> <!-- about image -->
                 </div>
             </div> <!-- row -->
