--- a/chatbot/templates/user/sidebar.html
+++ b/chatbot/templates/user/sidebar.html
@@ -14,12 +14,17 @@
                     ><i class="fas fa-robot"></i> <span>Chat Bots</span></a
                 >
             </li>
+            <li>
+                <a class="nav-link" href="{% url 'user:analytics' %}"
+                    ><i class="fas fa-fire"></i> <span>Analytics</span></a
+                >
+            </li>
             {% comment %}
             <li class="li-active">
                 <a class="nav-link" href="{% url 'user:console' %}"
                     ><i class="fas fa-terminal"></i>
-                    <span>Conversation Console</span></a
-                >
+                    <span>Conversation Console</span>
+                </a>
             </li>
             {% endcomment %}
             <!-- <li class="dropdown">
